# lexx-soft

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: public-tests.yml
src/lexxsoft_client/: __init__.py  client.py
tests/: conftest.py
tests/auth/: test_auth_smoke.py  test_private_endpoints.py
tests/public/: schemas.py  test_binance_schema.py  test_binance_smoke.py  test_market_data_schema.py  test_market_data_smoke.py  test_okx_schema.py  test_okx_smoke.py  test_rate_limits.py
tests/websocket/: test_public_websocket.py
