[project]
name = "lexxsoft-api-tests"
version = "0.1.0"
description = "Black-box API tests for LexxSoft trading platform"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.0",
    "pytest-html>=4.0",
    "requests>=2.31",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest-xdist",
    "responses",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
markers = [
    "public: public market-data endpoints (no auth required)",
    "auth: authenticated endpoints",
    "bots: trading bots endpoints",
    "smoke: quick health checks",
    "schema: response schema validation",
    "binance: tests that hit Binance API (may be blocked from cloud CI runners)",
]

[tool.ruff]
line-length = 100
target-version = "py311"
